@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 9~),
                libfile-slurp-perl,
                libfile-touch-perl,
                libfile-which-perl,
+               libstring-expand-perl,
 # Test suite dependencies
                libmoo-perl,
                libstring-random-perl,
@@ -28,6 +29,7 @@ Depends: libconfig-file-perl,
          libfile-rsync-perl,
          libfile-touch-perl,
          libfile-which-perl,
+         libstring-expand-perl,
          ${misc:Depends},
          ${perl:Depends}
 Pre-Depends: dpkg (>= 1.15.7.2)
