@@ -2,6 +2,9 @@ unburden-home-dir (0.4~dev) UNRELEASED; urgency=medium
 
   * New Features:
     + Set $XDG_CACHE_HOME to a subdirectory of unburden-home-dir's target.
+    + Expansion of environment variables inside configuration files and
+      list files.
+      - Add (build-)dependency on libstring-expand-perl.
   * Change section from x11 to utils. It's far more than just an Xsession
     hook nowadays.
   * Declare compliance with Debian Policy 3.9.6 (no other changes needed)
